--- a/index.html
+++ b/index.html
@@ -91,4 +91,245 @@
 </html>
 
 
-//second program 
+//second program Form validation
+
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+<meta charset="UTF-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<title>User Form</title> 
+<style> 
+body { 
+font-family: Arial, sans-serif; background: #f4f4f9; display: flex; justify-content: center; align-items: 
+center; height: 100vh; margin: 0; 
+} 
+.form-container { 
+background: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); width: 
+300px; 
+} 
+.form-container h2 { text-align: center; color: #333; } 
+.form-group { margin-bottom: 15px; } 
+.form-group label { display: block; margin-bottom: 5px; color: #555; } 
+.form-group input {
+    width: 100%; padding: 10px; border: 1px solid #ccc; border-radius: 4px; font-size: 14px; 
+} 
+.form-group input:focus { border-color: #007bff; outline: none; box-shadow: 0 0 5px rgba(0, 123, 255, 
+0.5); } 
+.error { color: red; font-size: 12px; } 
+button { 
+width: 100%; padding: 10px; background: #007bff; color: #fff; border: none; border-radius: 4px; 
+cursor: pointer; font-size: 16px; 
+} 
+button:hover { background: #0056b3; } 
+</style> 
+</head> 
+<body> 
+<div class="form-container"> 
+<h2>User Info</h2> 
+<form id="userForm"> 
+<div class="form-group"> 
+<label>Name:</label> 
+<input type="text" id="name"> 
+<span id="nameError" class="error"></span> 
+</div> 
+<div class="form-group"> 
+<label>Address:</label> 
+<input type="text" id="address"> 
+<span id="addressError" class="error"></span> 
+</div> 
+<div class="form-group">
+    
+    <label>Email:</label> 
+    <input type="email" id="email"> 
+    <span id="emailError" class="error"></span> 
+    </div> 
+    <div class="form-group"> 
+    <label>Phone:</label> 
+    <input type="text" id="phone"> 
+    <span id="phoneError" class="error"></span> 
+    </div> 
+    <button type="button" onclick="validateForm()">Submit</button> 
+    </form> 
+    </div> 
+    <script> 
+    const validateForm = () => { 
+    let isValid = true; 
+    ["name", "address", "email", "phone"].forEach(id => { 
+    const value = document.getElementById(id).value.trim(); 
+    const errorField = document.getElementById(id + "Error"); 
+    errorField.textContent = value ? "" : id.charAt(0).toUpperCase() + id.slice(1) + " is required."; 
+    if (id === "email" && value && !/^[^\s@]+@[^\s@]+\.[^\s@]+$/.test(value)) { 
+    errorField.textContent = "Invalid email."; isValid = false; 
+    } 
+    if (id === "phone" && value && !/^\d{10}$/.test(value)) { 
+    errorField.textContent = "Invalid phone."; isValid = false; 
+    } 
+    if (!value) isValid = false;
+}); 
+if (isValid) alert("Form submitted successfully!"); 
+}; 
+</script> 
+</body> 
+</html>
+-------------------------------------------------------------
+//third question quiz app
+
+
+<!DOCTYPE html> 
+<html lang="en"> 
+<head> 
+<meta charset="UTF-8"> 
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<title>Interactive Quiz</title> 
+<style> 
+body { 
+font-family: Arial, sans-serif; 
+background-color: #f4f4f9; 
+margin: 0; 
+padding: 20px; 
+display: flex; 
+flex-direction: column; 
+align-items: center; 
+} 
+.quiz-container { 
+background: #ffffff;
+border-radius: 10px; 
+padding: 20px; 
+box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+max-width: 500px; 
+width: 100%; 
+} 
+ 
+ 
+h1 { 
+text-align: center; 
+color: #333; 
+} 
+ 
+ 
+.question { 
+margin-bottom: 20px; 
+} 
+ 
+ 
+.question h3 { 
+margin-bottom: 10px; 
+} 
+ 
+ 
+.options { 
+list-style: none; 
+padding: 0; 
+} 
+ 
+ 
+.options li {
+    margin-bottom: 10px; 
+} 
+ 
+ 
+.options input { 
+margin-right: 10px; 
+} 
+ 
+ 
+button { 
+background-color: #3498db; 
+color: white; 
+padding: 10px 20px; 
+border: none; 
+border-radius: 5px; 
+cursor: pointer; 
+font-size: 16px; 
+} 
+ 
+ 
+button:hover { 
+background-color: #2980b9; 
+} 
+ 
+ 
+.result { 
+margin-top: 20px; 
+font-size: 18px; 
+text-align: center; 
+} 
+.result.success { 
+color: #2ecc71; 
+} 
+ 
+ 
+.result.failure { 
+color: #e74c3c; 
+} 
+</style> 
+</head> 
+<body> 
+<div class="quiz-container"> 
+<h1>Interactive Quiz</h1> 
+<form id="quizForm"> 
+<div class="question"> 
+<h3>1. What is the capital of France?</h3> 
+<ul class="options"> 
+<li><label><input type="radio" name="q1" value="0"> Berlin</label></li> 
+<li><label><input type="radio" name="q1" value="1"> Paris</label></li> 
+<li><label><input type="radio" name="q1" value="0"> Madrid</label></li> 
+<li><label><input type="radio" name="q1" value="0"> Rome</label></li> 
+</ul> 
+</div> 
+<div class="question"> 
+<h3>2. What is 2 + 2?</h3> 
+<ul class="options"> 
+<li><label><input type="radio" name="q2" value="0"> 3</label></li> 
+<li><label><input type="radio" name="q2" value="1"> 4</label></li> 
+<li><label><input type="radio" name="q2" value="0"> 5</label></li> 
+<li><label><input type="radio" name="q2" value="0"> 6</label></li> 
+</ul> 
+</div> 
+<div class="question"> 
+<h3>3. Which planet is known as the Red Planet?</h3> 
+<ul class="options"> 
+<li><label><input type="radio" name="q3" value="1"> Mars</label></li> 
+<li><label><input type="radio" name="q3" value="0"> Venus</label></li> 
+<li><label><input type="radio" name="q3" value="0"> Jupiter</label></li> 
+<li><label><input type="radio" name="q3" value="0"> Saturn</label></li> 
+</ul> 
+</div> 
+<button type="button" id="submitQuiz">Submit</button> 
+</form> 
+<div class="result" id="result"></div> 
+</div> 
+<script> 
+document.getElementById("submitQuiz").addEventListener("click", () => { 
+const form = document.getElementById("quizForm"); 
+const resultDiv = document.getElementById("result"); 
+const formData = new FormData(form); 
+let score = 0; 
+ 
+ 
+// Calculate score
+for (let [key, value] of formData.entries()) { 
+score += parseInt(value, 10); 
+} 
+ 
+ 
+// Display result 
+const totalQuestions = 3; 
+if (score === totalQuestions) { 
+resultDiv.textContent = Perfect! You scored ${score}/${totalQuestions}.; 
+resultDiv.className = "result success"; 
+} else if (score >= totalQuestions / 2) { 
+resultDiv.textContent = Good job! You scored ${score}/${totalQuestions}.; 
+resultDiv.className = "result success"; 
+} else { 
+resultDiv.textContent = Better luck next time. You scored ${score}/${totalQuestions}.; 
+resultDiv.className = "result failure"; 
+} 
+}); 
+</script> 
+</body> 
+</html>
+
+--------------------------------------------------------------------------------
+//forth question 
